[package]
authors = ["guillem <guillem.cordoba@gmail.com>"]
description = "A crate to help hApps add roles to their DNA using the progenitor pattern"
documentation = "https://docs.rs/holochain-turn-based-game"
edition = "2018"
exclude = [
  "example-dna/*",
]
license-file = "LICENSE"
name = "holochain_turn_based_game"
repository = "https://github.com/eyss/holochain-turn-based-game"
version = "0.2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = "0"
serde = "1"

chrono = {version = "0.4.19", features = ["serde"]}
hdk = {git = "https://github.com/holochain/holochain.git", rev = "5f1d6f4", package = "hdk"}
