[package]
authors = ["guillem <guillem.cordoba@gmail.com>"]
description = "Holochain generic library to build turn based games, with DHT validation of moves"
documentation = "https://docs.rs/hc-turn-based-game"
edition = "2018"
exclude = [
  "example-dna/*",
]
license-file = "LICENSE"
name = "hc_turn_based_game"
repository = "https://github.com/eyss/hc-turn-based-game"
version = "0.0.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = "0"
serde = "1"

chrono = {version = "0.4.19", features = ["serde"]}
hdk = {git = "https://github.com/holochain/holochain", rev = "363af6d8af8d18e4616f6aa56ad4d1f0fabaafb7", package = "hdk", version = "0.0.101-alpha.0"}
