[package]
authors = ["guillem.cordoba@gmail.com", "tim@pragmaticmind.com"]
edition = "2018"
name = "tictactoe"
version = "0.0.1"

[lib]
crate-type = ["cdylib", "rlib"]
name = "tictactoe"

[dependencies]
derive_more = "0"
serde = "1"

chrono = "0.4.19"
hdk = {git = "https://github.com/holochain/holochain", rev = "363af6d8af8d18e4616f6aa56ad4d1f0fabaafb7", package = "hdk", version = "0.0.101-alpha.0"}
hc_turn_based_game = {path = "../../../"}
