[package]
authors = ["guillem.cordoba@gmail.com", "tim@pragmaticmind.com"]
edition = "2018"
name = "tictactoe"
version = "0.0.1"

[lib]
crate-type = ["cdylib", "rlib"]
name = "tictactoe"

[dependencies]
derive_more = "0"
serde = "1"

hc_mixin_turn_based_game = {path = "../../../mixin"}
hdk =  {version = "0.0.120", features = ["encoding"]}
